# superhero_project

./: .gitignore  .pre-commit-config.yaml  DEV.md  LICENSE  README.md  alembic.ini  devenv.nix  flake.nix  pyproject.toml  tsconfig.json
.github/workflows/: audit.yml
alembic/: env.py
alembic/versions/: 0c0e02607cc7_add_notifications_table.py  243360e2b03e_init.py  4fe5c7b33599_rename_slug_to_page_name.py  902c17499866_add_moderator_note_to_articles.py  a2b5d7e9f1c3_add_comic_article_type.py  b1c3e7f9a2d4_article_links.py  e8cd183be506_add_tsvector_fts.py  f3a8c91d2e47_add_publisher_org_type.py
nix/: meta.nix  module.nix  server.nix
scripts/: build_js.sh  check_private_docstrings.py  kill_server.sh  promote_user.py  smoke.py
spec/cleanup/: C1_Cleanup.md  C2_TypeScript.md  C3_ArticlesSplit.md  C4_ComicType.md  C5_LinksSplit.md  C6_PageName.md  C7_SecurityHardening.md  C8_AuthRateLimiting.md  C9_CI.md
spec/idea/: MVP.md  Playwright.md  RequestChanges.md  SearchDiscovery.md
spec/milestone/: M10_LinkGraph.md  M11_InfoboxesAndDerivedViews.md  M12_ModerationNotifications.md  M13_SearchDiscovery.md  M1_Foundation.md  M2_Auth.md  M3_Articles.md  M4_Moderation.md  M5_Community.md  M6_Search.md  M7_Content.md  M8_Packaging.md  M9_Frontend.md
superhero_project/: __init__.py  _limiter.py  _templates.py  config.py  dependencies.py  main.py  middleware.py
superhero_project/db/: __init__.py  models.py  session.py
superhero_project/domain/: __init__.py  _utils.py  comic.py  (+9 more)
tests/: __init__.py  conftest.py  test_articles.py  test_articles_html.py  test_auth.py  test_comments.py  test_community.py  test_dependencies.py  test_infobox.py  test_links.py  test_main.py  test_middleware.py  test_moderation.py  test_votes.py  utils.py
(+35 files in other folders)
