[project]
name = "superhero-project"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "sqlalchemy[asyncio]>=2.0,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.0,<2",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "PT", "UP", "RUF"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
