[project]
name = "superhero-project"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "asyncpg",
    "sqlalchemy[asyncio]>=2.0,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.0,<2",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "PT", "UP", "RUF"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.alembic]
script_location = "alembic"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff-format"
type = "exec"
executable = "ruff"
options = "format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff-check"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
